Added comments for session management

--- a/.tmux/tmux.conf
+++ b/.tmux/tmux.conf
@@ -118,6 +118,13 @@ bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 # :move-pane -t :3.2 # split window 3's pane 2 and move current pane there
 
 
+# -- session mgmt ----------------------------
+
+# C-a + ( # previous session
+# C-a + ) # next session
+# C-a + s # choose session from list
+# C-a + L # `last` session
+
 # --------------------------------------------
 
 # ================================================
