split window and new window use cwd

--- a/.tmux/tmux.conf
+++ b/.tmux/tmux.conf
@@ -47,6 +47,13 @@ bind -n M-Down select-pane -D
 #   - mode-mouse
 # set -g mouse on
 
+# New/Split window in tmux CWD
+# https://superuser.com/a/720820
+# bind-key c  new-window -c "#{pane_start_path}"
+bind-key c  new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
+
 # https://stackoverflow.com/a/40902312
 # Version-specific commands [grumble, grumble]
 # See: https://github.com/tmux/tmux/blob/master/CHANGES
